fix dropdown overflowing

--- a/docs/src/styles/globals.css
+++ b/docs/src/styles/globals.css
@@ -336,13 +336,6 @@ a.btn svg {
 	padding: 0.5rem;
 }
 
-@media only screen and (min-width: 768px) {
-	.dropdown > div {
-		right: 0;
-		left: auto;
-	}
-}
-
 .w-6 {
 	width: 1.5rem;
 }
